src/objects/Out_Of_Office__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(  AND( TODAY() &gt;=  Start_Date__c, TODAY()  &lt;=  End_Date__c ) , True, False)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field denotes the user who is OOO.</inlineHelpText>
        <label>Assign From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_Of_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_Task_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This fields denotes the user who will own any new task that is assigned to the OOO user during the specified start and end date.</inlineHelpText>
        <label>Assign Task To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_Of_Office1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>End date of OOO.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Start date of OOO.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Out Of Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assign_From__c</columns>
        <columns>Assign_Task_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OOO-{00000}</displayFormat>
        <label>Out Of Office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AssignTo_N_AssignFrom_usr_cannot_be_same</fullName>
        <active>true</active>
        <description>Assign to and Assign from users cannot be same.</description>
        <errorConditionFormula>Assign_From__c  =  Assign_Task_To__c</errorConditionFormula>
        <errorDisplayField>Assign_Task_To__c</errorDisplayField>
        <errorMessage>Please select any user other than you!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Less_Than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be lesser than the Start Date!</errorMessage>
    </validationRules>
</CustomObject>